[package]
name = "jsonist"
version = "0.0.2"
authors = ["Peter Heesterman <heesterman.peter@gmail.com>"]
edition = "2018"

description = "A JSON formatter"
#repository = "https://github.com/peterheesterman/jsonist"
#readme = "./README.md"
keywords = ["json", "format", "simple", "fast", "formatter"]
categories = ["encoding", "parsing"]
license = "MIT"

[dependencies]
